# github-trending

./: Cargo.toml
src/: error.rs  get_trend.rs  lib.rs  main.rs  repository.rs  trend.rs  url.rs
src/model/: error.rs  repository.rs
