[package]
name = "github-trending"
version = "0.1.0"
authors = ["4afS <4afs.h1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nipper = "0.1.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.124", features = ["derive"]}
serde_json = "1.0.64"
anyhow = "1.0.38"
thiserror = "1.0.24"
derive_more = "0.99.11"
derive-new = "0.5.9"
octocrab = "0.8.11"
